homework overflow fix and and html entities + newline fix

--- a/www/homework.css
+++ b/www/homework.css
@@ -39,6 +39,7 @@
   font-size: 26px;
   margin-bottom: 10px;
   margin-top: 20px;
+  overflow-wrap: anywhere;
 }
 
 #homeworkContent {
@@ -47,6 +48,7 @@
   height: 100%;
   width: 100%;
   overflow-y: auto;
+  overflow-wrap: anywhere;
 }
 
 #previous, #next {
